[ES-2068] java migration 11 to 21 (#527)
* java migration 11 to 21

Signed-off-by: Sachin Rana <sacrana324@gmail.com>

* resolved review comments

Signed-off-by: Sachin Rana <sachinrana1827@gmail.com>

---------

Signed-off-by: Sachin Rana <sacrana324@gmail.com>
Signed-off-by: Sachin Rana <sachinrana1827@gmail.com>
Co-authored-by: Sachin Rana <sachinrana1827@gmail.com>